# illumio-py

./: .coveragerc  .gitignore  .readthedocs.yaml  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/: CLA.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: Bug_report.md  Custom.md  Feature_request.md
.github/workflows/: cla.yml  codeql-analysis.yml  run-tests.yml
docs/: Makefile  requirements.txt
docs/source/: api.rst  conf.py  index.rst
illumio/: __init__.py  events.py  exceptions.py  pce.py  pce.pyi  secpolicy.py
illumio/accessmanagement/: __init__.py  user.py
illumio/appgroups/: __init__.py  appgroupsummary.py
illumio/explorer/: __init__.py  trafficanalysis.py
illumio/infrastructure/: __init__.py  containercluster.py  network.py  secureconnectgateway.py
illumio/policyobjects/: __init__.py  containercluster.py  iplist.py  jsonobject.py  label.py  network.py  policyobject.py  secpolicy.py  securityprincipal.py  service.py  serviceaddress.py  serviceport.py  trafficanalysis.py  user.py  ven.py  virtualserver.py  virtualservice.py  vulnerability.py  vulnerabilityreport.py  workload.py
illumio/rules/: __init__.py  actor.py  enforcementboundary.py  iptablesrule.py  rule.py  ruleset.py
illumio/util/: __init__.py  constants.py  functions.py  jsonutils.py
illumio/vulnerabilities/: __init__.py  vulnerability.py  vulnerabilityreport.py
illumio/workloads/: __init__.py  pairing_profile.py  pairingprofile.py  ven.py  workload.py
tests/: conftest.py  mocks.py  test_ip_list.py  test_pairing_profile.py  test_pairing_profiles.py  test_pce.py  test_rule.py  test_rule_sets.py  test_rules.py  test_ruleset.py  test_traffic_analysis.py  test_virtual_service.py  test_workload.py  test_workloads.py
tests/data/: active_ip_lists.json  container_clusters.json  container_workload_profiles.json  draft_ip_lists.json  draft_rulesets.json  events.json  ip_lists.json  label_groups.json  pairing_key.json  pairing_profiles.json  rule.json  rule_sets.json  rules.json  ruleset.json  rulesets.json  services.json  traffic_query.json  traffic_query_response.json  vens.json  virtual_service.json  virtual_services.json  workload.json  workloads.json
tests/integration/: common.py  conftest.py  helpers.py  sweepers.py  test_intg_container_clusters.py  test_intg_container_workload_profiles.py  test_intg_enforcement_boundaries.py  test_intg_ip_lists.py  test_intg_label_groups.py  test_intg_labels.py  test_intg_pairing_profiles.py  test_intg_pce.py  test_intg_rule_sets.py  test_intg_rules.py  (+4 more)
(+36 files in other folders)
