[build-system]
requires = ["setuptools", "wheel", "setuptools_scm>=6.4.2"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -p no:warnings --doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
testpaths = [
    "tests"
]

[tool.setuptools_scm]
write_to = "illumio/_version.py"
