[metadata]
name = illumio
description = API framework to connect to the Illumio Core Policy Compute Engine
author = Illumio
author_email = app-integrations@illumio.com

[options]
packages = find:
install_requires =
  requests >= 2.26.0
  dataclasses >= 0.8; python_version == '3.6'

[options.packages.find]
exclude=tests
