[metadata]
name = illumio
description = API framework to connect to the Illumio Core Policy Compute Engine
author = Illumio
author_email = app-integrations@illumio.com
license_file = LICENSE
classifiers =
  Development Status :: 4 - Beta
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
  requests >= 2.26.0
  dataclasses >= 0.8; python_version == '3.6'

[options.packages.find]
exclude=tests
